--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="preview">
           <p>No files currently selected for upload</p>
         </div>
+        <canvas>
+          An alternative text describing what your canvas displays.
+        </canvas>
         <div>
           <button>Submit</button>
         </div>
